conexao com o banco

--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=academia
-DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_CONNECTION=mysql
+DB_HOST=ufnprojetoacad.mysql.dbaas.com.br
+DB_PORT=3306
+DB_DATABASE=ufnprojetoacad
+DB_USERNAME=ufnprojetoacad
+DB_PASSWORD=Sgutec0sk!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
